--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="./assets/images/logo_cabinet_eh.png" alt="">
+              <img src="./assets/images/LOGO EH_Black.jpg" alt="">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -79,8 +79,8 @@
         <div class="col-lg-4">
           <div class="left-image">
             <img src="assets/images/featured.jpg" alt="">
-            <a href="property-details.html"><img src="assets/images/featured-icon.png" alt=""
-                style="max-width: 60px; padding: 0px;"></a>
+            <a href="property-details.html"><img src="assets/images/LOGO EH 2.0 BLANC.jpg" alt=""
+                style="max-width: 75px; padding: 0px;"></a>
           </div>
         </div>
         <div class="col-lg-5">
@@ -164,19 +164,19 @@
           <div class="info-table">
             <ul>
               <li>
-                <img src="assets/images/info-icon-01.png" alt="" style="max-width: 52px;">
+                <img src="assets/images/icon-star.png" alt="" style="max-width: 52px;">
                 <h4 style="color: white;">+15 <br><span>Années d'expérience</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-02.png" alt="" style="max-width: 52px;">
+                <img src="assets/images/expertise-icon.png" alt="" style="max-width: 52px;">
                 <h4 style="color: white;">Expertise<br><span>Sectorielle</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-03.png" alt="" style="max-width: 52px;">
+                <img src="assets/images/sur-mesure-icon.png" alt="" style="max-width: 52px;">
                 <h4 style="color: white;">Support<br><span>Sur-mesure</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-04.png" alt="" style="max-width: 52px;">
+                <img src="assets/images/quality-icon.png" alt="" style="max-width: 52px;">
                 <h4 style="color: white;">Innovation<br><span>Et qualité</span></h4>
               </li>
             </ul>
@@ -245,8 +245,8 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="section-heading">
-            <h6>| Best Deal</h6>
-            <h2>Find Your Best Deal Right Now!</h2>
+            <h6>| Technologie et précision</h6>
+            <h2>Des outils de pointe pour un travail d’excellence</h2>
           </div>
         </div>
         <div class="col-lg-12">
@@ -257,15 +257,15 @@
                   <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="appartment-tab" data-bs-toggle="tab"
                       data-bs-target="#appartment" type="button" role="tab" aria-controls="appartment"
-                      aria-selected="true">Appartment</button>
+                      aria-selected="true">Nos outils</button>
                   </li>
                   <li class="nav-item" role="presentation">
                     <button class="nav-link" id="villa-tab" data-bs-toggle="tab" data-bs-target="#villa" type="button"
-                      role="tab" aria-controls="villa" aria-selected="false">Villa House</button>
+                      role="tab" aria-controls="villa" aria-selected="false">Nos compétences</button>
                   </li>
                   <li class="nav-item" role="presentation">
                     <button class="nav-link" id="penthouse-tab" data-bs-toggle="tab" data-bs-target="#penthouse"
-                      type="button" role="tab" aria-controls="penthouse" aria-selected="false">Penthouse</button>
+                      type="button" role="tab" aria-controls="penthouse" aria-selected="false">Notre équipe</button>
                   </li>
                 </ul>
               </div>
@@ -275,23 +275,29 @@
                     <div class="col-lg-3">
                       <div class="info-table">
                         <ul>
-                          <li>Total Flat Space <span>185 m2</span></li>
-                          <li>Floor number <span>26th</span></li>
-                          <li>Number of rooms <span>4</span></li>
-                          <li>Parking Available <span>Yes</span></li>
-                          <li>Payment Process <span>Bank</span></li>
+                          <span>
+                            Ensemble, nous évaluons minutieusement les <strong>matériaux</strong> et leur
+                            <strong>qualité</strong>,<br>
+                            en tenant compte de vos besoins spécifiques et des exigences techniques de chaque projet.
+                            <br><br>Nous nous assurons ainsi que chaque choix
+                            soit parfaitement adapté pour garantir durabilité et performance.
+                          </span>
                         </ul>
                       </div>
                     </div>
                     <div class="col-lg-6">
-                      <img src="assets/images/deal-01.jpg" alt="">
+                      <img src="assets/images/outil-3d.PNG" alt="">
                     </div>
                     <div class="col-lg-3">
-                      <h4>Extra Info About Property</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut
-                        labore et dolore magna aliqua quised ipsum suspendisse.
-                        <br><br>When you need free CSS templates, you can simply type TemplateMo in any search engine
-                        website. In addition, you can type TemplateMo Portfolio, TemplateMo One Page Layouts, etc.
+                      <h4>Nos moyens</h4>
+                      <p>Notre équipement de travail est composé de <strong>machines</strong> et d'<strong>outils de
+                          grandes marques reconnues</strong> dans toute la profession.<br><br>
+
+                        Grâce aux <strong>dernières technologies</strong>, nous vous garantissons un <strong>travail
+                          soigné, précis</strong> et d’une <strong>qualité irréprochable</strong>.<br><br>
+
+                        Nous mettons également à votre disposition des solutions de <strong>conception et de
+                          visualisation de vos plans en 3D</strong>.
                       </p>
                       <div class="icon-button">
                         <a href="property-details.html"><i class="fa fa-calendar"></i> Schedule a visit</a>
@@ -304,23 +310,26 @@
                     <div class="col-lg-3">
                       <div class="info-table">
                         <ul>
-                          <li>Total Flat Space <span>250 m2</span></li>
-                          <li>Floor number <span>26th</span></li>
-                          <li>Number of rooms <span>5</span></li>
-                          <li>Parking Available <span>Yes</span></li>
-                          <li>Payment Process <span>Bank</span></li>
+                          <span>Ensemble, nous évaluons avec soin les <strong>matériaux</strong> et leur
+                            <strong>qualité</strong>,
+                            en prenant en compte vos besoins spécifiques et les contraintes de votre projet.<br><br>Nous
+                            sélectionnons les matériaux les plus adaptés<br>
+                            pour garantir un travail durable, performant et à la hauteur de vos attentes.
+                          </span>
                         </ul>
                       </div>
                     </div>
-                    <div class="col-lg-6">
-                      <img src="assets/images/deal-02.jpg" alt="">
+                    <div class="col-lg-4">
+                      <img style=" max-height: 400px; max-width: 400px;" src="assets/images/Competences.PNG" alt="">
                     </div>
-                    <div class="col-lg-3">
-                      <h4>Detail Info About Villa</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut
-                        labore et dolore magna aliqua quised ipsum suspendisse. <br><br>Swag fanny pack lyft blog twee.
-                        JOMO ethical copper mug, succulents typewriter shaman DIY kitsch twee taiyaki fixie hella venmo
-                        after messenger poutine next level humblebrag swag franzen.</p>
+                    <div class="col-lg-5">
+                      <h4>Nos compétences</h4>
+                      <p><strong>LE CABINET EH</strong> est une entreprise générale de bâtiment, spécialisée dans la
+                        <strong>rénovation tous corps d’état</strong>.<br><br>
+
+                        Depuis <strong>18 ans</strong>, nous intervenons sur <strong>Nîmes et sa région</strong><br>
+                        pour rénover <strong>appartements, maisons et locaux commerciaux</strong>.
+                      </p>
                       <div class="icon-button">
                         <a href="property-details.html"><i class="fa fa-calendar"></i> Schedule a visit</a>
                       </div>
@@ -332,23 +341,29 @@
                     <div class="col-lg-3">
                       <div class="info-table">
                         <ul>
-                          <li>Total Flat Space <span>320 m2</span></li>
-                          <li>Floor number <span>34th</span></li>
-                          <li>Number of rooms <span>6</span></li>
-                          <li>Parking Available <span>Yes</span></li>
-                          <li>Payment Process <span>Bank</span></li>
+                          <span>
+                            Nous faisons en sorte de nous adapter à votre <strong>budget</strong>,<br>
+                            tout en nous rapprochant au maximum de vos <strong>désirs</strong> et de vos
+                            attentes.<br><br>Nous
+                            cherchons toujours à vous offrir
+                            les meilleures solutions, équilibrant qualité et coût, pour un résultat à la hauteur de vos
+                            ambitions.
+                          </span>
                         </ul>
                       </div>
                     </div>
                     <div class="col-lg-6">
-                      <img src="assets/images/deal-03.jpg" alt="">
+                      <img src="assets/images/notre-equipe.jpg" alt="">
                     </div>
                     <div class="col-lg-3">
-                      <h4>Extra Info About Penthouse</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut
-                        labore et dolore magna aliqua quised ipsum suspendisse. <br><br>Swag fanny pack lyft blog twee.
-                        JOMO ethical copper mug, succulents typewriter shaman DIY kitsch twee taiyaki fixie hella venmo
-                        after messenger poutine next level humblebrag swag franzen.</p>
+                      <h4>Notre équipe</h4>
+                      <p>Notre équipe est composée de <strong>professionnels avisés</strong> regroupant<br>
+                        plusieurs années d'expérience dans divers <strong>corps de métiers</strong>.<br><br>
+
+                        Tous ouvriers <strong>qualifiés</strong>, nous mettons nos <strong>compétences</strong> à votre
+                        service<br>
+                        pour un travail de <strong>qualité</strong> et une <strong>finition irréprochable</strong>.
+                      </p>
                       <div class="icon-button">
                         <a href="property-details.html"><i class="fa fa-calendar"></i> Schedule a visit</a>
                       </div>
@@ -363,123 +378,38 @@
     </div>
   </div>
 
-  <div class="properties section">
+  <div class="single-property section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 offset-lg-4">
-          <div class="section-heading text-center">
-            <h6>| Properties</h6>
-            <h2>We Provide The Best Property You Like</h2>
-          </div>
+        <div class="col-lg-8">
+          <div class="main-content">
+            <span class="category">Apparment</span>
+            <h4>24 New Street Miami, OR 24560</h4>
+            <p>Get <strong>the best villa agency</strong> HTML CSS Bootstrap Template for your company website. TemplateMo provides you the <a href="https://www.google.com/search?q=best+free+css+templates" target="_blank">best free CSS templates</a> in the world. Please tell your friends about it. Thank you. Cloud bread kogi bitters pitchfork shoreditch tumblr yr succulents single-origin coffee schlitz enamel pin you probably haven't heard of them ugh hella.
+            
+            <br><br>When you look for free CSS templates, you can simply type TemplateMo in any search engine website. In addition, you can type TemplateMo Digital Marketing, TemplateMo Corporate Layouts, etc. Master cleanse +1 intelligentsia swag post-ironic, slow-carb chambray knausgaard PBR&B DSA poutine neutra cardigan hoodie pop-up.</p>
+          </div> 
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-6">
-          <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-01.jpg" alt=""></a>
-            <span class="category">Luxury Villa</span>
-            <h6>$2.264.000</h6>
-            <h4><a href="property-details.html">18 New Street Miami, OR 97219</a></h4>
+        <div class="col-lg-4">
+          <div class="info-table">
             <ul>
-              <li>Bedrooms: <span>8</span></li>
-              <li>Bathrooms: <span>8</span></li>
-              <li>Area: <span>545m2</span></li>
-              <li>Floor: <span>3</span></li>
-              <li>Parking: <span>6 spots</span></li>
+              <li>
+                <img src="assets/images/info-icon-01.png" alt="" style="max-width: 52px;">
+                <h4>450 m2<br><span>Total Flat Space</span></h4>
+              </li>
+              <li>
+                <img src="assets/images/info-icon-02.png" alt="" style="max-width: 52px;">
+                <h4>Contract<br><span>Contract Ready</span></h4>
+              </li>
+              <li>
+                <img src="assets/images/info-icon-03.png" alt="" style="max-width: 52px;">
+                <h4>Payment<br><span>Payment Process</span></h4>
+              </li>
+              <li>
+                <img src="assets/images/info-icon-04.png" alt="" style="max-width: 52px;">
+                <h4>Safety<br><span>24/7 Under Control</span></h4>
+              </li>
             </ul>
-            <div class="main-button">
-              <a href="property-details.html">Schedule a visit</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-02.jpg" alt=""></a>
-            <span class="category">Luxury Villa</span>
-            <h6>$1.180.000</h6>
-            <h4><a href="property-details.html">54 Mid Street Florida, OR 27001</a></h4>
-            <ul>
-              <li>Bedrooms: <span>6</span></li>
-              <li>Bathrooms: <span>5</span></li>
-              <li>Area: <span>450m2</span></li>
-              <li>Floor: <span>3</span></li>
-              <li>Parking: <span>8 spots</span></li>
-            </ul>
-            <div class="main-button">
-              <a href="property-details.html">Schedule a visit</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-03.jpg" alt=""></a>
-            <span class="category">Luxury Villa</span>
-            <h6>$1.460.000</h6>
-            <h4><a href="property-details.html">26 Old Street Miami, OR 38540</a></h4>
-            <ul>
-              <li>Bedrooms: <span>5</span></li>
-              <li>Bathrooms: <span>4</span></li>
-              <li>Area: <span>225m2</span></li>
-              <li>Floor: <span>3</span></li>
-              <li>Parking: <span>10 spots</span></li>
-            </ul>
-            <div class="main-button">
-              <a href="property-details.html">Schedule a visit</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-04.jpg" alt=""></a>
-            <span class="category">Apartment</span>
-            <h6>$584.500</h6>
-            <h4><a href="property-details.html">12 New Street Miami, OR 12650</a></h4>
-            <ul>
-              <li>Bedrooms: <span>4</span></li>
-              <li>Bathrooms: <span>3</span></li>
-              <li>Area: <span>125m2</span></li>
-              <li>Floor: <span>25th</span></li>
-              <li>Parking: <span>2 cars</span></li>
-            </ul>
-            <div class="main-button">
-              <a href="property-details.html">Schedule a visit</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-05.jpg" alt=""></a>
-            <span class="category">Penthouse</span>
-            <h6>$925.600</h6>
-            <h4><a href="property-details.html">34 Beach Street Miami, OR 42680</a></h4>
-            <ul>
-              <li>Bedrooms: <span>4</span></li>
-              <li>Bathrooms: <span>4</span></li>
-              <li>Area: <span>180m2</span></li>
-              <li>Floor: <span>38th</span></li>
-              <li>Parking: <span>2 cars</span></li>
-            </ul>
-            <div class="main-button">
-              <a href="property-details.html">Schedule a visit</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-06.jpg" alt=""></a>
-            <span class="category">Modern Condo</span>
-            <h6>$450.000</h6>
-            <h4><a href="property-details.html">22 New Street Portland, OR 16540</a></h4>
-            <ul>
-              <li>Bedrooms: <span>3</span></li>
-              <li>Bathrooms: <span>2</span></li>
-              <li>Area: <span>165m2</span></li>
-              <li>Floor: <span>26th</span></li>
-              <li>Parking: <span>3 cars</span></li>
-            </ul>
-            <div class="main-button">
-              <a href="property-details.html">Schedule a visit</a>
-            </div>
           </div>
         </div>
       </div>
