--- a/index.html
+++ b/index.html
@@ -381,35 +381,22 @@
   <div class="single-property section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-10">
           <div class="main-content">
-            <span class="category">Apparment</span>
-            <h4>24 New Street Miami, OR 24560</h4>
-            <p>Get <strong>the best villa agency</strong> HTML CSS Bootstrap Template for your company website. TemplateMo provides you the <a href="https://www.google.com/search?q=best+free+css+templates" target="_blank">best free CSS templates</a> in the world. Please tell your friends about it. Thank you. Cloud bread kogi bitters pitchfork shoreditch tumblr yr succulents single-origin coffee schlitz enamel pin you probably haven't heard of them ugh hella.
-            
-            <br><br>When you look for free CSS templates, you can simply type TemplateMo in any search engine website. In addition, you can type TemplateMo Digital Marketing, TemplateMo Corporate Layouts, etc. Master cleanse +1 intelligentsia swag post-ironic, slow-carb chambray knausgaard PBR&B DSA poutine neutra cardigan hoodie pop-up.</p>
-          </div> 
-        </div>
-        <div class="col-lg-4">
-          <div class="info-table">
-            <ul>
-              <li>
-                <img src="assets/images/info-icon-01.png" alt="" style="max-width: 52px;">
-                <h4>450 m2<br><span>Total Flat Space</span></h4>
-              </li>
-              <li>
-                <img src="assets/images/info-icon-02.png" alt="" style="max-width: 52px;">
-                <h4>Contract<br><span>Contract Ready</span></h4>
-              </li>
-              <li>
-                <img src="assets/images/info-icon-03.png" alt="" style="max-width: 52px;">
-                <h4>Payment<br><span>Payment Process</span></h4>
-              </li>
-              <li>
-                <img src="assets/images/info-icon-04.png" alt="" style="max-width: 52px;">
-                <h4>Safety<br><span>24/7 Under Control</span></h4>
-              </li>
-            </ul>
+            <div class="section-heading">
+              <h6>| Caution de qualité</h6>
+            </div>
+            <h4>Une certification gage de confiance</h4>
+            <p>Avec EH, vous bénéficiez de la caution de référence <strong>NF</strong> pour les matériaux utilisés,<br>
+              vous garantissant à la fois <strong>sécurité</strong> et <strong>qualité</strong>.<br><br>
+
+              Cette certification atteste que nos maisons sont conçues et construites<br>
+              en parfaite conformité avec les <strong>exigences des normes en vigueur</strong>.
+            </p>
+          </div>
+          <div style="padding: 20px;">
+            <img style="width: 55px;" src="assets/images/NF.png" alt="">
+            <img style="width: 50px;" src="assets/images/logo-batiment-basse-consommation.png" alt="">
           </div>
         </div>
       </div>
