--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="index.html" class="active">Accueil</a></li>
-              <li><a href="properties.html">Réalisations</a></li>
+              <li><a href="realisations.html">Réalisations</a></li>
               <li><a href="contact.html">Nous contacter</a></li>
               <li><a href="#"><i class="fa fa-pencil"></i> Demander un devis</a></li>
             </ul>
