--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         <div class="col-lg-4">
           <div class="left-image">
             <img src="assets/images/featured.jpg" alt="">
-            <a href="property-details.html"><img src="assets/images/LOGO EH 2.0 BLANC.jpg" alt=""
+            <a href="property-details.html">
+              <img id="logo-cabinet-eh" src="assets/images/LOGO EH 2.0 BLANC.jpg" alt=""
                 style="max-width: 75px; padding: 0px;"></a>
           </div>
         </div>
@@ -248,7 +249,7 @@
         <div class="col-lg-4">
           <div class="section-heading">
             <h6>| Technologie et précision</h6>
-            <h2>Des outils de pointe pour un travail d’excellence</h2>
+            <h2 style="color: black;">Des outils de pointe pour un travail d’excellence</h2>
           </div>
         </div>
         <div class="col-lg-12">
@@ -301,9 +302,6 @@
                         Nous mettons également à votre disposition des solutions de <strong>conception et de
                           visualisation de vos plans en 3D</strong>.
                       </p>
-                      <div class="icon-button">
-                        <a href="property-details.html"><i class="fa fa-calendar"></i> Schedule a visit</a>
-                      </div>
                     </div>
                   </div>
                 </div>
@@ -332,9 +330,6 @@
                         Depuis <strong>18 ans</strong>, nous intervenons sur <strong>Nîmes et sa région</strong><br>
                         pour rénover <strong>appartements, maisons et locaux commerciaux</strong>.
                       </p>
-                      <div class="icon-button">
-                        <a href="property-details.html"><i class="fa fa-calendar"></i> Schedule a visit</a>
-                      </div>
                     </div>
                   </div>
                 </div>
@@ -365,10 +360,6 @@
                         Tous ouvriers <strong>qualifiés</strong>, nous mettons nos <strong>compétences</strong> à votre
                         service<br>
                         pour un travail de <strong>qualité</strong> et une <strong>finition irréprochable</strong>.
-                      </p>
-                      <div class="icon-button">
-                        <a href="property-details.html"><i class="fa fa-calendar"></i> Schedule a visit</a>
-                      </div>
                     </div>
                   </div>
                 </div>
