--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <body>
 
+  <script src="//code.tidio.co/60tczqii0pdjlnmfidv80wffciymd0gl.js" async></script>
+
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
