--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,9 @@ https://templatemo.com/tm-591-villa-agency
           </div>
         </div>
         <div class="col-lg-6">
-          <form id="contact-form" action="https://formspree.io/f/mpwpqdoe" method="POST">
+          <form id="contact-form"
+            action="https://script.google.com/macros/s/AKfycbyTwBvATtnYDZRPcns_jS6ffxrsawG81scnGHnmDdxfZVNvKzwl_m6GfhmeBZcflbRtSg/exec"
+            method="POST">
             <div class="row">
               <div class="col-lg-12">
                 <fieldset>
